Basic PDF Rendering

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </body>
   <script src="/nowjs/now.js"></script>
   <script src="assets/loader.js"></script>
+  <script src="assets/pdf.js"></script>
   <script src="assets/app.js"></script>
   <script type="text/javascript">
     loader.require('copresent/main');
