Checkpoint: Now.js Session Creation and Page Change Propagation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CO-PRESENT</title>
+    <title>copresent</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name = "viewport" content = "initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width, target-densityDpi=device-dpi">
@@ -9,16 +9,7 @@
 	<link rel="stylesheet" href="assets/app.css"/>
   </head>
   <body>
-    <div id="main" class="container">
-      <nav class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="brand" href="#"><strong>co</strong>present</a>
-			<i class="alf-nav-brand">&nbsp;</i>
-          </div>
-        </div>
-      </nav>
-    </div>
+    <div id="main" class="container"></div>
   </body>
   <script src="/nowjs/now.js"></script>
   <script src="assets/loader.js"></script>
